--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -35,7 +35,7 @@ chico sundermann">
 						<div class="text-center mt-4">
 							<h1 style="font-size: 100px">404</h1>
 							<p class="lead">
-								Page Not Found Sorry bro 
+								Page Not Found Sorry bro have a nice day
 							</p>
 
 						</div>
